Minor fix to css

--- a/StarshipTraveler.UI.Client/wwwroot/css/site.css
+++ b/StarshipTraveler.UI.Client/wwwroot/css/site.css
@@ -6,6 +6,10 @@ body {
     background-image: url(../images/space-background.jpg)
 }
 
+ul {
+    color: whitesmoke;
+}
+
 h1 {
     color: whitesmoke;
     margin-left: 20px;
