Minor change to Start solution

--- a/Assets/060-Forms Validation/BookTicket.cshtml
+++ b/Assets/060-Forms Validation/BookTicket.cshtml
@@ -63,7 +63,7 @@
     private async Task HandleValidSubmit()
     {
         // To demo reuse of validation logic uncomment the following line:
-        Ticket.Passenger = string.Empty;
+        // Ticket.Passenger = string.Empty;
 
         await Http.PostJsonAsync("/api/tickets", Ticket);
     }
