Add references to Start solution

--- a/Start/StarshipTraveler.UI.Client/_ViewImports.cshtml
+++ b/Start/StarshipTraveler.UI.Client/_ViewImports.cshtml
@@ -7,5 +7,5 @@
 @using Microsoft.JSInterop
 @using StarshipTraveler.UI.Client
 @using StarshipTraveler.UI.Client.Shared
-@*@using StarshipTraveler.Model
-@using StarshipTraveler.Components*@
+@using StarshipTraveler.Model
+@using StarshipTraveler.Components
