Update Start solution and assets to latest Blazor preview

--- a/Assets/010-Basic TicketList/TicketList.razor
+++ b/Assets/010-Basic TicketList/TicketList.razor
@@ -11,35 +11,25 @@
     }
     else
     {
-        <TimeSelector bind-Time="@Time" />
         <div class="row">
-            @foreach (var ticket in Tickets)
-            {
-                <TicketCard Ticket="@ticket" />
-            }
+            <ul>
+                @foreach (var ticket in Tickets)
+                {
+                    <li>@ticket.Passenger</li>
+                }
+            </ul>
         </div>
     }
 </div>
 
 @functions {
-    private TimeRelation time = TimeRelation.Past;
-    private TimeRelation Time
-    {
-        get => time;
-        set
-        {
-            time = value;
-            RefreshTickets();
-            StateHasChanged();
-        }
-    }
-
+    private TimeRelation Time { get; set; }
     private IEnumerable<Ticket> AllTickets { get; set; }
     private IEnumerable<Ticket> Tickets { get; set; }
 
     protected override async Task OnInitAsync()
     {
-        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("/api/tickets");
+        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("api/tickets");
         RefreshTickets();
     }
 
