--- a/StarshipTraveler.Components/TicketQRCode.razor
+++ b/StarshipTraveler.Components/TicketQRCode.razor
@@ -2,7 +2,7 @@
     <img class="card-img-top" src="../images/qrcode.png" alt="QR Code">
 </a>
 
-@functions {
+@code {
     [Parameter]
     private string TicketLink { get; set; }
 }
