--- a/StartshipTraveler.ServerSide/Pages/BookTicket.razor
+++ b/StartshipTraveler.ServerSide/Pages/BookTicket.razor
@@ -11,15 +11,15 @@
 
         <div class="form-group">
             <label for="passenger">Passenger</label>
-            <InputText id="passenger" class="form-control" bind-Value="@Ticket.Passenger" />
+            <InputText id="passenger" class="form-control" @bind-Value="@Ticket.Passenger" />
         </div>
         <div class="form-group">
             <label for="date">Date</label>
-            <InputDate id="date" class="form-control" bind-Value="@Ticket.Date" />
+            <InputDate id="date" class="form-control" @bind-Value="@Ticket.Date" />
         </div>
         <div class="form-group">
             <label for="from">From</label>
-            <InputSelect id="from" class="form-control" bind-Value="@Ticket.From">
+            <InputSelect id="from" class="form-control" @bind-Value="@Ticket.From">
                 @if (Bases != null)
                 {
                     <option value=""></option>
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label for="to">To</label>
-            <InputSelect id="to" class="form-control" bind-Value="@Ticket.To">
+            <InputSelect id="to" class="form-control" @bind-Value="@Ticket.To">
                 @if (Bases != null)
                 {
                     <option value=""></option>
@@ -51,7 +51,7 @@
 
 </div>
 
-@functions {
+@code {
     private Ticket Ticket { get; set; } = new Ticket { Date = DateTime.Today };
     private Base[] Bases { get; set; }
     private Connection[] Connections { get; set; }
