--- a/StartshipTraveler.ServerSide/Pages/TicketDetails.razor
+++ b/StartshipTraveler.ServerSide/Pages/TicketDetails.razor
@@ -29,17 +29,17 @@
 
 @code {
     [Parameter]
-    private string TicketId { get; set; }
+    public string TicketId { get; set; }
 
     private Ticket Ticket { get; set; }
     private Base FromBase { get; set; }
     private Base ToBase { get; set; }
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         Ticket = await Http.GetJsonAsync<Ticket>($"api/tickets/{TicketId}");
-        var fromBaseTask = Http.GetJsonAsync<Base>($"api/bases/{Ticket.From}");
-        var toBaseTask = Http.GetJsonAsync<Base>($"api/bases/{Ticket.To}");
+        var fromBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.From}");
+        var toBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.To}");
         await Task.WhenAll(fromBaseTask, toBaseTask);
 
         FromBase = fromBaseTask.Result;
