--- a/StarshipTraveler.Components/TicketCard.razor
+++ b/StarshipTraveler.Components/TicketCard.razor
@@ -17,7 +17,7 @@
 
 @code {
     [Parameter]
-    private Ticket Ticket { get; set; }
+    public Ticket Ticket { get; set; }
 
     private string GetTicketLink(string ticketID) => $"/tickets/{ticketID}";
 }
