Adapted to blazor preview 9 (client + walkthrough)

--- a/Assets/030-Parent-Child/TicketCard.razor
+++ b/Assets/030-Parent-Child/TicketCard.razor
@@ -17,7 +17,7 @@
 
 @functions {
     [Parameter]
-    private Ticket Ticket { get; set; }
+    public Ticket Ticket { get; set; }
 
     private string GetTicketLink(string ticketID) => $"tickets/{ticketID}";
 }
