--- a/Assets/040-Router/TicketDetails.razor
+++ b/Assets/040-Router/TicketDetails.razor
@@ -29,7 +29,7 @@
 
 @functions {
     [Parameter]
-    private string TicketId { get; set; }
+    public string TicketId { get; set; }
 
     private Ticket Ticket { get; set; }
     private Base FromBase { get; set; }
