--- a/Assets/020-UI Composition (Optional)/TicketList.razor
+++ b/Assets/020-UI Composition (Optional)/TicketList.razor
@@ -27,7 +27,7 @@
 
     protected override async Task OnInitAsync()
     {
-        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("api/tickets");
+        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("localhost:5000/api/tickets");
         RefreshTickets();
     }
 
