--- a/Assets/070-JS Interop/BookTicket.razor
+++ b/Assets/070-JS Interop/BookTicket.razor
@@ -58,8 +58,8 @@
 
     protected override async Task OnInitAsync()
     {
-        Bases = await Http.GetJsonAsync<Base[]>($"api/bases");
-        Connections = await Http.GetJsonAsync<Connection[]>($"api/connections");
+        Bases = await Http.GetJsonAsync<Base[]>($"localhost:5000/api/bases");
+        Connections = await Http.GetJsonAsync<Connection[]>($"localhost:5000/api/connections");
     }
 
     private async Task HandleValidSubmit()
@@ -81,6 +81,6 @@
             }
         }
 
-        await Http.PostJsonAsync("api/tickets", Ticket);
+        await Http.PostJsonAsync("localhost:5000/api/tickets", Ticket);
     }
 }
