--- a/StarshipTraveler.UI.Client/Pages/TicketDetails.razor
+++ b/StarshipTraveler.UI.Client/Pages/TicketDetails.razor
@@ -37,9 +37,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Ticket = await Http.GetJsonAsync<Ticket>($"api/tickets/{TicketId}");
-        var fromBaseTask = Http.GetJsonAsync<Base>($"api/bases/{Ticket.From}");
-        var toBaseTask = Http.GetJsonAsync<Base>($"api/bases/{Ticket.To}");
+        Ticket = await Http.GetJsonAsync<Ticket>($"http://localhost:5000/api/tickets/{TicketId}");
+        var fromBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.From}");
+        var toBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.To}");
         await Task.WhenAll(fromBaseTask, toBaseTask);
 
         FromBase = fromBaseTask.Result;
