--- a/StarshipTraveler.UI.Client/Pages/TicketList.razor
+++ b/StarshipTraveler.UI.Client/Pages/TicketList.razor
@@ -39,7 +39,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("api/tickets");
+        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("http://localhost:5000/api/tickets");
         RefreshTickets();
     }
 
