--- a/StartshipTraveler.ServerSide/Pages/TicketDetails.razor
+++ b/StartshipTraveler.ServerSide/Pages/TicketDetails.razor
@@ -37,7 +37,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Ticket = await Http.GetJsonAsync<Ticket>($"api/tickets/{TicketId}");
+        Ticket = await Http.GetJsonAsync<Ticket>($"http://localhost:5000/api/tickets/{TicketId}");
         var fromBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.From}");
         var toBaseTask = Http.GetJsonAsync<Base>($"http://localhost:5000/api/bases/{Ticket.To}");
         await Task.WhenAll(fromBaseTask, toBaseTask);
