Adapted to use Razor Class Lib for whole project

--- a/StarshipTraveler.Components/Pages/BookTicket.razor
+++ b/StarshipTraveler.Components/Pages/BookTicket.razor
@@ -2,6 +2,7 @@
 @inject HttpClient Http
 @inject IJSRuntime JsRuntime
 @inject IFlightplan Flightplan
+@layout Shared.MainLayout
 
 <div class="book">
     <h1>Book Your Ticket</h1>
