--- a/StarshipTraveler.Components/Pages/TicketCard.razor
+++ b/StarshipTraveler.Components/Pages/TicketCard.razor
@@ -1,4 +1,5 @@
 ﻿@using StarshipTraveler.Model
+@layout Shared.MainLayout
 
 <div class="card">
     <TicketQRCode TicketLink="@GetTicketLink(Ticket.ID)" />
