--- a/StartshipTraveler.ServerSide/Blazor/_Host.cshtml
+++ b/StartshipTraveler.ServerSide/Blazor/_Host.cshtml
@@ -10,7 +10,7 @@
     <base href="~/" />
     <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/StarshipTraveler.Components/css/site.css" rel="stylesheet" />
 
     <script>
         js = {
@@ -23,7 +23,7 @@
     <title>Starship Traveler</title>
 </head>
 <body>
-    <app>@(await Html.RenderComponentAsync<App>())</app>
+    <app>Loading ...</app>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
