--- a/Assets/020-UI Composition (Optional)/TicketList.razor
+++ b/Assets/020-UI Composition (Optional)/TicketList.razor
@@ -20,7 +20,7 @@
     }
 </div>
 
-@functions {
+@code {
     private TimeRelation Time { get; set; }
     private IEnumerable<Ticket> AllTickets { get; set; }
     private IEnumerable<Ticket> Tickets { get; set; }
