--- a/Assets/030-Parent-Child/TimeSelector.razor
+++ b/Assets/030-Parent-Child/TimeSelector.razor
@@ -7,7 +7,7 @@
             onclick="@SwitchToUpcoming">Upcoming Travels</button>
 </div>
 
-@functions {
+@code {
     [Parameter]
     public TimeRelation Time { get; set; }
 
