--- a/Assets/010-Basic TicketList/TicketList.razor
+++ b/Assets/010-Basic TicketList/TicketList.razor
@@ -22,7 +22,7 @@
     }
 </div>
 
-@functions {
+@code {
     private TimeRelation Time { get; set; }
     private IEnumerable<Ticket> AllTickets { get; set; }
     private IEnumerable<Ticket> Tickets { get; set; }
