--- a/StarshipTraveler.Components/_Imports.razor
+++ b/StarshipTraveler.Components/_Imports.razor
@@ -1,6 +1,6 @@
-﻿@using Microsoft.AspNetCore.Components.Forms
+﻿@using StarshipTraveler.Components
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using System.Net.Http
 @using StarshipTraveler.Model
-@using StarshipTraveler.Components
