--- a/Start/StarshipTraveler.Components/Shared/NavMenu.razor
+++ b/Start/StarshipTraveler.Components/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="">
-        <img src="images/spaceship.svg" width="30" />
+        <img src="_content/StarshipTraveler.Components/images/spaceship.svg" width="30" />
         Starship Traveler
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
