--- a/Start/StarshipTraveler.Components/_Imports.razor
+++ b/Start/StarshipTraveler.Components/_Imports.razor
@@ -3,4 +3,4 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-<!-- @using StarshipTraveler.Model -->
+@* @using StarshipTraveler.Model *@
