--- a/Assets/010-Basic TicketList/TicketList.razor
+++ b/Assets/010-Basic TicketList/TicketList.razor
@@ -27,7 +27,7 @@
     private IEnumerable<Ticket> AllTickets { get; set; }
     private IEnumerable<Ticket> Tickets { get; set; }
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("localhost:5000/api/tickets");
         RefreshTickets();
