--- a/Assets/030-Parent-Child/TicketCard.razor
+++ b/Assets/030-Parent-Child/TicketCard.razor
@@ -19,5 +19,5 @@
     [Parameter]
     public Ticket Ticket { get; set; }
 
-    private string GetTicketLink(string ticketID) => $"tickets/{ticketID}";
+    private string GetTicketLink(string ticketID) => $"/tickets/{ticketID}";
 }
