--- a/Assets/010-Basic TicketList/TicketList.razor
+++ b/Assets/010-Basic TicketList/TicketList.razor
@@ -29,7 +29,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("localhost:5000/api/tickets");
+        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("http://localhost:5000/api/tickets");
         RefreshTickets();
     }
 
