--- a/Assets/020-UI Composition (Optional)/TicketList.razor
+++ b/Assets/020-UI Composition (Optional)/TicketList.razor
@@ -25,9 +25,9 @@
     private IEnumerable<Ticket> AllTickets { get; set; }
     private IEnumerable<Ticket> Tickets { get; set; }
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
-        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("localhost:5000/api/tickets");
+        AllTickets = await Http.GetJsonAsync<IEnumerable<Ticket>>("http://localhost:5000/api/tickets");
         RefreshTickets();
     }
 
