--- a/StartshipTraveler.ServerSide/Blazor/_Host.cshtml
+++ b/StartshipTraveler.ServerSide/Blazor/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @namespace StartshipTraveler.ServerSide.Pages
+@using StarshipTraveler.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -23,7 +24,9 @@
     <title>Starship Traveler</title>
 </head>
 <body>
-    <app>Loading ...</app>
+    <app>
+        @(await Html.RenderComponentAsync<App>(RenderMode.Server))
+    </app>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
