Fix issues with Start solution

--- a/Start/StarshipTraveler.Components/_Imports.razor
+++ b/Start/StarshipTraveler.Components/_Imports.razor
@@ -4,5 +4,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using System.Net.Http
+@using StarshipTraveler.Model
 @using StarshipTraveler.Components.Shared
-@*using StarshipTraveler.Model*@
