--- a/Start/StarshipTraveler.Components/_Imports.razor
+++ b/Start/StarshipTraveler.Components/_Imports.razor
@@ -4,5 +4,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using System.Net.Http
+@using System.Text.Json
 @using StarshipTraveler.Model
 @using StarshipTraveler.Components.Shared
