--- a/Assets/070-JS Interop/BookTicket.razor
+++ b/Assets/070-JS Interop/BookTicket.razor
@@ -1,5 +1,6 @@
 ﻿@page "/book"
 @inject HttpClient Http
+@using System.Text;
 @inject IJSRuntime JsRuntime
 @inject IFlightplan Flightplan
 
@@ -56,10 +57,38 @@
     private Base[] Bases { get; set; }
     private Connection[] Connections { get; set; }
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
-        Bases = await Http.GetJsonAsync<Base[]>($"http://localhost:5000/api/bases");
-        Connections = await Http.GetJsonAsync<Connection[]>($"http://localhost:5000/api/connections");
+        Bases = await GetBasisAsync();
+        Connections = await GetConnectionsAsync();
+    }
+
+    private async Task<Connection[]> GetConnectionsAsync()
+    {
+        var response = await Http.GetAsync("http://localhost:5000/api/connections");
+        var connectionsJson = await response.Content.ReadAsStringAsync();
+        var connections = JsonSerializer.Deserialize<Connection[]>(connectionsJson, new JsonSerializerOptions
+        {
+            PropertyNameCaseInsensitive = true,
+        });
+        return connections;
+    }
+
+    private async Task<Base[]> GetBasisAsync()
+    {
+        var response = await Http.GetAsync("http://localhost:5000/api/bases");
+        var basesJson = await response.Content.ReadAsStringAsync();
+        var bases = JsonSerializer.Deserialize<Base[]>(basesJson, new JsonSerializerOptions
+        {
+            PropertyNameCaseInsensitive = true,
+        });
+        return bases;
+    }
+
+    private async Task PostTicket(Ticket ticket)
+    {
+        var content = new StringContent(JsonSerializer.Serialize(ticket), Encoding.UTF8, "application/json");
+        await Http.PostAsync("http://localhost:5000/api/tickets", content);
     }
 
     private async Task HandleValidSubmit()
@@ -72,7 +101,8 @@
         {
             await JsRuntime.InvokeAsync<object>("starshipTravel.alert", "Sorry, no connection for this route");
             return;
-        } else if (path.Length > 2)
+        }
+        else if (path.Length > 2)
         {
             var route = string.Join("-> ", path.Select(p => p.Name));
             if (!await JsRuntime.InvokeAsync<bool>("starshipTravel.confirm", $"No direct route, we can offer {route}, ok?"))
@@ -81,6 +111,6 @@
             }
         }
 
-        await Http.PostJsonAsync("http://localhost:5000/api/tickets", Ticket);
+        await PostTicket(Ticket);
     }
 }
