--- a/StarshipTraveler.Components/Pages/BaseImage.razor
+++ b/StarshipTraveler.Components/Pages/BaseImage.razor
@@ -2,11 +2,11 @@
 @layout Shared.MainLayout
 
 <div class="base">
-    <img src="@Base.Image" />
-    <h2>@Base.Name</h2>
+    <img src="@Base?.Image" />
+    <h2>@Base?.Name</h2>
 </div>
 
 @code {
     [Parameter]
-    public Base Base { get; set; }
+    public Base? Base { get; set; }
 }
