--- a/StarshipTraveler.Components/Pages/BookTicket.razor
+++ b/StarshipTraveler.Components/Pages/BookTicket.razor
@@ -54,9 +54,9 @@
 </div>
 
 @code {
-    private Ticket Ticket { get; set; } = new Ticket { Date = DateTime.Today };
-    private Base[] Bases { get; set; }
-    private Connection[] Connections { get; set; }
+    private Ticket Ticket { get; set; } = new Ticket { ID = string.Empty, Date = DateTime.Today };
+    private Base[]? Bases { get; set; }
+    private Connection[]? Connections { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -66,6 +66,11 @@
 
     private async Task HandleValidSubmit()
     {
+        if (Bases == null || Connections == null)
+        {
+            throw new InvalidOperationException("Collections not initialized");
+        }
+
         // To demo reuse of validation logic uncomment the following line:
         // Ticket.Passenger = string.Empty;
 
