--- a/StarshipTraveler.ServerSide/Pages/_Host.cshtml
+++ b/StarshipTraveler.ServerSide/Pages/_Host.cshtml
@@ -1,13 +1,17 @@
 ﻿@page "/"
-@namespace StartshipTraveler.ServerSide.Pages
+@namespace StarshipTraveler.ServerSide.Pages
 @using StarshipTraveler.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StarshipTraveler.ServerSide</title>
     <base href="~/" />
     <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,12 +24,10 @@
         }
         window.starshipTravel = js;
     </script>
-
-    <title>Starship Traveler</title>
 </head>
 <body>
     <app>
-        @(await Html.RenderComponentAsync<App>(RenderMode.Server))
+        <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
