--- a/Assets/020-UI Composition (Optional)/TicketList.razor
+++ b/Assets/020-UI Composition (Optional)/TicketList.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @page "/tickets"
+@layout Shared.MainLayout
 @inject HttpClient Http
+@using System.Text.Json
 
 <h1>Your Tickets</h1>
 
@@ -22,8 +24,9 @@
 
 @code {
     private TimeRelation Time { get; set; }
-    private IEnumerable<Ticket> AllTickets { get; set; }
-    private IEnumerable<Ticket> Tickets { get; set; }
+
+    private IEnumerable<Ticket>? AllTickets { get; set; }
+    private IEnumerable<Ticket>? Tickets { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
