--- a/Assets/010-Basic TicketList/TicketList.razor
+++ b/Assets/010-Basic TicketList/TicketList.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @page "/tickets"
+@layout Shared.MainLayout
 @inject HttpClient Http
+@using System.Text.Json
 
 <h1>Your Tickets</h1>
 
@@ -11,7 +13,7 @@
     }
     else
     {
-        <div class="row">
+        <div style="color: white" class="row">
             <ul>
                 @foreach (var ticket in Tickets)
                 {
@@ -24,8 +26,9 @@
 
 @code {
     private TimeRelation Time { get; set; }
-    private IEnumerable<Ticket> AllTickets { get; set; }
-    private IEnumerable<Ticket> Tickets { get; set; }
+
+    private IEnumerable<Ticket>? AllTickets { get; set; }
+    private IEnumerable<Ticket>? Tickets { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
