--- a/Assets/080-ApiService/Pages/TicketList.razor
+++ b/Assets/080-ApiService/Pages/TicketList.razor
@@ -35,8 +35,8 @@
         }
     }
 
-    private IEnumerable<Ticket> AllTickets { get; set; }
-    private IEnumerable<Ticket> Tickets { get; set; }
+    private IEnumerable<Ticket>? AllTickets { get; set; }
+    private IEnumerable<Ticket>? Tickets { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
